--- a/views/layout.slim
+++ b/views/layout.slim
@@ -3,7 +3,7 @@ html
   head 
     meta charset="utf-8"
     title Just Do It 
-    link rel="stylesheet" media="screen, projection" href="/styles.css"
+    link rel="stylesheet" media="screen, projection" href="/style.css"
     /[if lt IE 9] 
       script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
   body 
