--- a/views/task.slim
+++ b/views/task.slim
@@ -1,4 +1,4 @@
-li.task
+li.task id=task.id class=(task.completed_at.nil? ? "" : "completed")
   = task.name
   form.update action="/task/#{task.id}" method="POST"
     input type="hidden" name="_method" value="PUT"
@@ -8,4 +8,4 @@ li.task
       input type="submit" value="✓" title="Uncomplete Task"
   form.delete action="/task/#{task.id}" method="POST"
     input type="hidden" name="_method" value="DELETE"
-    input type="submit" value="&times;" title="Delete Task"
+    input type="submit" value="✖" title="Delete Task"
