--- a/public/style.css
+++ b/public/style.css
@@ -1,62 +1,66 @@
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Merriweather+Sans:800,700);
 body {
-  font-family: sans-serif;
-}
+  font-family: "Merriweather", serif;
+  background: #eee; }
 
-h1 {
+.container {
+  max-width: 1024px;
+  width: 100%;
+  margin: 0 auto; }
+
+.logo {
   color: #e8308c;
-}
-.completed{
-  text-decoration: line-through;
-  }
- 
-.tasks{
-  padding:0;
-  list-style:none;
-  width:400px;
-  }
- 
-.task{
-  position:relative;
-  padding:2px 0 2px 28px;
-  border-bottom: dotted 1px #ccc;
-}
- 
-form.update{
-  position:absolute;
-  bottom:2px;
-  left:0;
-  }
-form.update input{
-  background:white;
-  color:white;
-  padding:0 2px;
-  border:solid 1px gray;
-  cursor:pointer;
-}
- 
-.tasks li.completed form.update input{
-  color:#47FD6B;
-  }
- 
-form.delete{
-  display:inline;
-  }
-   
-form.delete input{
-  background:none;
-  cursor:pointer;
-  border:none;
-  }
+  text-align: center; }
 
-.lists{
-  padding:0;
-  list-style:none;
-  overflow:hidden;
-  }
-   
-.list{
+.completed {
+  text-decoration: line-through; }
+
+.tasks {
+  padding: 0;
+  list-style: none;
+  width: 400px; }
+
+.task {
+  position: relative;
+  padding: 2px 0 2px 28px;
+  border-bottom: dotted 1px #ccc; }
+
+form.update {
+  position: absolute;
+  bottom: 2px;
+  left: 0; }
+
+form.update input {
+  background: white;
+  color: white;
+  padding: 0 2px;
+  border: solid 1px gray;
+  cursor: pointer; }
+
+.tasks li.completed form.update input {
+  color: #47FD6B; }
+
+form.delete {
+  display: inline; }
+
+form.delete input {
+  background: none;
+  cursor: pointer;
+  border: none; }
+
+.lists {
+  padding: 0;
+  list-style: none;
+  overflow: hidden; }
+
+.list {
   float: left;
-  width:23%;
-  margin:0 1%;
-  border-top:solid 5px #ccc;
-  }
+  width: 29.3%;
+  margin: 0 1% 1%;
+  padding: 10px;
+  background: white;
+  box-shadow: 0px 0px 10px rgba(209, 209, 209, 0);
+  transition: all 0.3s ease-in-out; }
+  .list:hover {
+    margin-top: -3px;
+    box-shadow: 0px 3px 10px #d1d1d1; }
