--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,10 +2,11 @@ doctype html
 html 
   head 
     meta charset="utf-8"
-    title Just Do It 
+    title Taskanatra
     link rel="stylesheet" media="screen, projection" href="/style.css"
     /[if lt IE 9] 
       script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
-  body 
-    h1 Just Do It 
-    == yield
+  body
+    .container
+      h1.logo Taskanatra 
+      == yield
