--- a/public/style.scss
+++ b/public/style.scss
@@ -1,10 +1,18 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Merriweather+Sans:800,700);
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Merriweather+Sans:400);
 
 // VARIABLES
 $serif: 'Merriweather', serif;
-$sans-serif: 'Merriweather Sans', sans-serif;
+$sans-serif: 'Open Sans', sans-serif;
 
 /////////////////////////////////
+
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
 body {
   font-family: $serif;
@@ -18,8 +26,30 @@ body {
 }
 
 .logo {
+  font-size: 500%;
   color: #e8308c;
   text-align: center;
+}
+
+.task-input {
+  width: 760px;
+  height: 50px;
+  font-size: 24px;
+  padding: 0 10px;
+}
+
+.task-add {
+  width: 190px;
+  height: 50px;
+  border: 0;
+  background: #e8308c;
+  color: white;
+  font-size: 18px;
+  transition: all 0.3s ease-in-out;
+
+  &:hover {
+    background: darken(#e8308c, 10%);
+  }
 }
 
 .completed{
@@ -29,13 +59,14 @@ body {
 .tasks{
   padding:0;
   list-style:none;
-  width:400px;
   }
  
 .task{
   position:relative;
-  padding:2px 0 2px 28px;
+  padding:2px 0 2px 26px;
   border-bottom: dotted 1px #ccc;
+  font-family: $sans-serif;
+  font-weight: 400;
 }
  
 form.update{
@@ -47,13 +78,14 @@ form.update input{
   background:white;
   color:white;
   padding:0 2px;
-  border:solid 1px gray;
+  border: solid 1px gray;
   cursor:pointer;
 }
  
 .tasks li.completed form.update input{
-  color:#47FD6B;
-  }
+  color: #e8308c;
+  border: solid 1px #e1e1e1;
+}
  
 form.delete{
   display:inline;
