--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Merriweather+Sans:400);
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Montserrat:700);
 html {
   box-sizing: border-box; }
 
@@ -7,34 +7,51 @@ html {
 
 body {
   font-family: "Merriweather", serif;
-  background: #eee; }
+  background: #eee;
+  margin: 0;
+  padding: 0; }
 
 .container {
   max-width: 1024px;
   width: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  padding: 0 15px; }
 
-.logo {
-  font-size: 500%;
-  color: #e8308c;
-  text-align: center; }
-
-.task-input {
-  width: 760px;
-  height: 50px;
-  font-size: 24px;
-  padding: 0 10px; }
-
-.task-add {
-  width: 190px;
-  height: 50px;
-  border: 0;
-  background: #e8308c;
-  color: white;
-  font-size: 18px;
-  transition: all 0.3s ease-in-out; }
-  .task-add:hover {
-    background: #ce1773; }
+.header {
+  padding: 100px 0;
+  text-align: center;
+  background: #222222; }
+  .header .logo {
+    margin: 0;
+    font-family: "Montserrat", sans-serif;
+    font-size: 3em;
+    color: #e9e9e9;
+    text-align: center;
+    letter-spacing: 5px;
+    text-transform: uppercase; }
+  .header .tagline {
+    color: #888;
+    font-size: 0.9em;
+    margin: 0; }
+  .header .add-form {
+    margin: 80px auto 0;
+    width: 80%; }
+    .header .add-form .task-input {
+      width: 80%;
+      height: 50px;
+      border: 0;
+      font-size: 24px;
+      padding: 0 10px; }
+    .header .add-form .task-add {
+      width: 20%;
+      height: 50px;
+      border: 0;
+      background: #e8b730;
+      color: white;
+      font-size: 18px;
+      transition: all 0.3s ease-in-out; }
+      .header .add-form .task-add:hover {
+        background: #ce9d17; }
 
 .completed {
   text-decoration: line-through; }
@@ -47,7 +64,6 @@ body {
   position: relative;
   padding: 2px 0 2px 26px;
   border-bottom: dotted 1px #ccc;
-  font-family: "Open Sans", sans-serif;
   font-weight: 400; }
 
 form.update {
@@ -82,11 +98,10 @@ form.delete input {
 .list {
   float: left;
   width: 29.3%;
-  margin: 0 1% 1%;
+  margin: 0 1% 10px;
   padding: 10px;
   background: white;
   box-shadow: 0px 0px 10px rgba(209, 209, 209, 0);
   transition: all 0.3s ease-in-out; }
   .list:hover {
-    margin-top: -3px;
     box-shadow: 0px 3px 10px #d1d1d1; }
