--- a/public/style.scss
+++ b/public/style.scss
@@ -1,10 +1,15 @@
-@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Merriweather+Sans:400);
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Montserrat:700);
 
-// VARIABLES
+// VARIABLES //////////////////////////
+
 $serif: 'Merriweather', serif;
-$sans-serif: 'Open Sans', sans-serif;
+$sans-serif: 'Montserrat', sans-serif;
 
-/////////////////////////////////
+$black: #222;
+$cloud-white: #E9E9E9;
+$primary-colour: #E8B730;
+
+// MAIN //////////////////////////////
 
 html {
   box-sizing: border-box;
@@ -17,55 +22,79 @@ html {
 body {
   font-family: $serif;
   background: #eee;
+  margin: 0;
+  padding: 0;
 }
 
 .container {
   max-width: 1024px;
   width: 100%;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
-.logo {
-  font-size: 500%;
-  color: #e8308c;
+.header {
+  padding: 100px 0;
   text-align: center;
-}
+  background: $black;
 
-.task-input {
-  width: 760px;
-  height: 50px;
-  font-size: 24px;
-  padding: 0 10px;
-}
+  .logo {
+    margin: 0;
+    font-family: $sans-serif;
+    font-size: 3em;
+    color: $cloud-white;
+    text-align: center;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+  }
 
-.task-add {
-  width: 190px;
-  height: 50px;
-  border: 0;
-  background: #e8308c;
-  color: white;
-  font-size: 18px;
-  transition: all 0.3s ease-in-out;
+  .tagline {
+    color: #888;
+    font-size: 0.9em;
+    margin: 0;
+  }
 
-  &:hover {
-    background: darken(#e8308c, 10%);
+  .add-form {
+    margin: 80px auto 0;
+    width: 80%;
+
+    .task-input {
+      width: 80%;
+      height: 50px;
+      border: 0;
+      font-size: 24px;
+      padding: 0 10px;
+    }
+
+    .task-add {
+      width: 20%;
+      height: 50px;
+      border: 0;
+      background: $primary-colour;
+      color: white;
+      font-size: 18px;
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        background: darken($primary-colour, 10%);
+      }
+    }
   }
 }
 
 .completed{
   text-decoration: line-through;
-  }
+}
  
 .tasks{
   padding:0;
   list-style:none;
-  }
+}
  
 .task{
   position:relative;
   padding:2px 0 2px 26px;
   border-bottom: dotted 1px #ccc;
-  font-family: $sans-serif;
   font-weight: 400;
 }
  
@@ -73,7 +102,7 @@ form.update{
   position:absolute;
   bottom:2px;
   left:0;
-  }
+}
 form.update input{
   background:white;
   color:white;
@@ -89,24 +118,24 @@ form.update input{
  
 form.delete{
   display:inline;
-  }
+}
    
 form.delete input{
   background:none;
   cursor:pointer;
   border:none;
-  }
+}
 
 .lists{
   padding:0;
   list-style:none;
   overflow:hidden;
-  }
+}
    
 .list{
   float: left;
   width: 29.3%;
-  margin: 0 1% 1%;
+  margin: 0 1% 10px;
   padding: 10px;
   // border-top: solid 5px #ccc;
   background: white;
@@ -114,7 +143,7 @@ form.delete input{
   transition: all 0.3s ease-in-out;
 
   &:hover {
-    margin-top: -3px;
+    // margin-top: -1px;
     box-shadow: 0px 3px 10px rgba(#d1d1d1, 1);
   }
 }
