--- a/views/layout.slim
+++ b/views/layout.slim
@@ -7,4 +7,8 @@ html
     /[if lt IE 9] 
       script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
   body
-      == yield
+    == yield
+
+    footer.footer
+      .container
+        p.copyright Taskanatra was created by Tajdid Rahman using Sinatra, and powered using Heroku.
