--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,7 @@ body {
   padding: 0 15px; }
 
 .header {
+  margin-bottom: 40px;
   padding: 100px 0;
   text-align: center;
   background: #222222; }
@@ -33,6 +34,15 @@ body {
     color: #888;
     font-size: 0.9em;
     margin: 0; }
+    .header .tagline a {
+      color: #888;
+      text-decoration: none;
+      padding-bottom: 3px;
+      border-bottom: 1px solid rgba(136, 136, 136, 0);
+      transition: all 0.3s ease-in-out; }
+      .header .tagline a:hover {
+        padding-bottom: 0;
+        border-bottom: 1px solid #888888; }
   .header .add-form {
     margin: 80px auto 0;
     width: 80%; }
@@ -40,7 +50,8 @@ body {
       width: 80%;
       height: 50px;
       border: 0;
-      font-size: 24px;
+      font-family: "Merriweather", serif;
+      font-size: 1.3em;
       padding: 0 10px; }
     .header .add-form .task-add {
       width: 20%;
@@ -48,7 +59,9 @@ body {
       border: 0;
       background: #e8b730;
       color: white;
-      font-size: 18px;
+      font-family: "Merriweather", serif;
+      font-style: italic;
+      font-size: 1.3em;
       transition: all 0.3s ease-in-out; }
       .header .add-form .task-add:hover {
         background: #ce9d17; }
@@ -105,3 +118,8 @@ form.delete input {
   transition: all 0.3s ease-in-out; }
   .list:hover {
     box-shadow: 0px 3px 10px #d1d1d1; }
+
+.footer {
+  text-align: center;
+  font-size: 0.9em;
+  color: #999; }
