--- a/views/index.slim
+++ b/views/index.slim
@@ -5,8 +5,8 @@ header.header
 
     .add-form
       form.new action="/new/list" method="POST"
-        input type="text" name="list[name]" class="task-input"
-        input type="submit" value="+ List" class="task-add"
+        input type="text" placeholder="Add new task here" name="list[name]" class="task-input"
+        input type="submit" value="Add Task" class="task-add"
 
 .container
   ul.lists
