--- a/public/style.css
+++ b/public/style.css
@@ -52,7 +52,7 @@ body {
       border: 0;
       font-family: "Merriweather", serif;
       font-size: 1.3em;
-      padding: 0 10px; }
+      padding: 0 20px; }
     .header .add-form .task-add {
       width: 20%;
       height: 50px;
@@ -67,7 +67,8 @@ body {
         background: #ce9d17; }
 
 .completed {
-  text-decoration: line-through; }
+  text-decoration: line-through;
+  color: #aaa; }
 
 .tasks {
   padding: 0;
@@ -75,6 +76,7 @@ body {
 
 .task {
   position: relative;
+  font-size: 0.9em;
   padding: 2px 0 2px 26px;
   border-bottom: dotted 1px #ccc;
   font-weight: 400; }
@@ -92,8 +94,13 @@ form.update input {
   cursor: pointer; }
 
 .tasks li.completed form.update input {
-  color: #e8308c;
+  color: #e8b730;
   border: solid 1px #e1e1e1; }
+
+.new {
+  margin-bottom: 12px; }
+  .new input[type="text"] {
+    width: 100%; }
 
 form.delete {
   display: inline; }
@@ -107,6 +114,9 @@ form.delete input {
   padding: 0;
   list-style: none;
   overflow: hidden; }
+  .lists h2 {
+    font-size: 1.1em;
+    margin: 6px 0 12px; }
 
 .list {
   float: left;
