--- a/views/layout.slim
+++ b/views/layout.slim
@@ -12,3 +12,5 @@ html
     footer.footer
       .container
         p.copyright Taskanatra was created by Tajdid Rahman using Sinatra, and powered using Heroku.
+    script src="/masonry.js"
+    script src="/scripts.js"
