--- a/public/style.css
+++ b/public/style.css
@@ -1,135 +1,47 @@
 @import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic|Montserrat:700);
-html {
-  box-sizing: border-box; }
+.container:after { content: " "; display: block; clear: both; }
 
-*, *:before, *:after {
-  box-sizing: inherit; }
+html { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
-body {
-  font-family: "Merriweather", serif;
-  background: #eee;
-  margin: 0;
-  padding: 0; }
+*, *:before, *:after { -webkit-box-sizing: inherit; -moz-box-sizing: inherit; box-sizing: inherit; }
 
-.container {
-  max-width: 1024px;
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 15px; }
+body { font-family: "Merriweather", serif; background: #eee; margin: 0; padding: 0; }
 
-.header {
-  margin-bottom: 40px;
-  padding: 100px 0;
-  text-align: center;
-  background: #222222; }
-  .header .logo {
-    margin: 0;
-    font-family: "Montserrat", sans-serif;
-    font-size: 3em;
-    color: #e9e9e9;
-    text-align: center;
-    letter-spacing: 5px;
-    text-transform: uppercase; }
-  .header .tagline {
-    color: #888;
-    font-size: 0.9em;
-    margin: 0; }
-    .header .tagline a {
-      color: #888;
-      text-decoration: none;
-      padding-bottom: 3px;
-      border-bottom: 1px solid rgba(136, 136, 136, 0);
-      transition: all 0.3s ease-in-out; }
-      .header .tagline a:hover {
-        padding-bottom: 0;
-        border-bottom: 1px solid #888888; }
-  .header .add-form {
-    margin: 80px auto 0;
-    width: 80%; }
-    .header .add-form .task-input {
-      width: 80%;
-      height: 50px;
-      border: 0;
-      font-family: "Merriweather", serif;
-      font-size: 1.3em;
-      padding: 0 20px; }
-    .header .add-form .task-add {
-      width: 20%;
-      height: 50px;
-      border: 0;
-      background: #e8b730;
-      color: white;
-      font-family: "Merriweather", serif;
-      font-style: italic;
-      font-size: 1.3em;
-      transition: all 0.3s ease-in-out; }
-      .header .add-form .task-add:hover {
-        background: #ce9d17; }
+.container { max-width: 1024px; width: 100%; margin: 0 auto; padding: 0 15px; }
 
-.completed {
-  text-decoration: line-through;
-  color: #aaa; }
+.header { margin-bottom: 40px; padding: 80px 0; text-align: center; background: #222222; }
+.header .logo { margin: 0; font-family: "Montserrat", sans-serif; font-size: 3em; color: #e9e9e9; text-align: center; letter-spacing: 5px; text-transform: uppercase; }
+.header .tagline { color: #888; font-size: 0.9em; margin: 0; }
+.header .tagline a { color: #888; text-decoration: none; padding-bottom: 3px; border-bottom: 1px solid rgba(136, 136, 136, 0); -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
+.header .tagline a:hover { padding-bottom: 0; border-bottom: 1px solid #888888; }
+.header .add-form { margin: 60px auto 0; width: 80%; }
+.header .add-form .task-input { width: 80%; height: 50px; border: 0; font-family: "Merriweather", serif; font-size: 1.3em; font-style: italic; padding: 0 20px; }
+.header .add-form .task-add { width: 20%; height: 50px; border: 0; background: #e8b730; color: white; font-family: "Merriweather", serif; font-style: italic; font-size: 1.4em; -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
+.header .add-form .task-add:hover { background: #ce9d17; }
 
-.tasks {
-  padding: 0;
-  list-style: none; }
+.completed { text-decoration: line-through; color: #aaa; }
 
-.task {
-  position: relative;
-  font-size: 0.9em;
-  padding: 2px 0 2px 26px;
-  border-bottom: dotted 1px #ccc;
-  font-weight: 400; }
+.tasks { padding: 0; list-style: none; }
 
-form.update {
-  position: absolute;
-  bottom: 2px;
-  left: 0; }
+.task { position: relative; font-size: 0.9em; padding: 5px 0 5px 26px; border-bottom: 1px solid #eee; font-weight: 400; }
 
-form.update input {
-  background: white;
-  color: white;
-  padding: 0 2px;
-  border: solid 1px gray;
-  cursor: pointer; }
+form.update { position: absolute; bottom: 7px; left: 0; }
 
-.tasks li.completed form.update input {
-  color: #e8b730;
-  border: solid 1px #e1e1e1; }
+form.update input { background: white; color: white; padding: 0 2px; border: solid 1px gray; cursor: pointer; }
 
-.new {
-  margin-bottom: 12px; }
-  .new input[type="text"] {
-    width: 100%; }
+.tasks li.completed form.update input { color: #e8b730; border: solid 1px #e1e1e1; }
 
-form.delete {
-  display: inline; }
+.new { margin-bottom: 12px; }
+.new input[type="text"] { width: 100%; }
 
-form.delete input {
-  background: none;
-  cursor: pointer;
-  border: none; }
+form.delete { display: inline; }
 
-.lists {
-  padding: 0;
-  list-style: none;
-  overflow: hidden; }
-  .lists h2 {
-    font-size: 1.1em;
-    margin: 6px 0 12px; }
+form.delete input { background: none; cursor: pointer; border: none; }
 
-.list {
-  float: left;
-  width: 29.3%;
-  margin: 0 1% 10px;
-  padding: 10px;
-  background: white;
-  box-shadow: 0px 0px 10px rgba(209, 209, 209, 0);
-  transition: all 0.3s ease-in-out; }
-  .list:hover {
-    box-shadow: 0px 3px 10px #d1d1d1; }
+.lists { padding: 0; list-style: none; overflow: hidden; }
+.lists h2 { font-size: 1.1em; margin: 6px 0 12px; }
 
-.footer {
-  text-align: center;
-  font-size: 0.9em;
-  color: #999; }
+.list { float: left; width: 29.3%; margin: 0 1% 10px; padding: 10px; background: white; -webkit-box-shadow: 0px 0px 10px rgba(209, 209, 209, 0); box-shadow: 0px 0px 10px rgba(209, 209, 209, 0); -webkit-transition: all 0.3s ease-in-out; transition: all 0.3s ease-in-out; }
+.list:hover { -webkit-box-shadow: 0px 3px 10px #d1d1d1; box-shadow: 0px 3px 10px #d1d1d1; }
+
+.footer { text-align: center; font-size: 0.9em; color: #999; }
