Tidying up directories and made it sort of responsive

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -3,7 +3,7 @@ html
   head 
     meta charset="utf-8"
     title Taskanatra
-    link rel="stylesheet" media="screen, projection" href="/style.css"
+    link rel="stylesheet" media="screen, projection" href="/css/style.css"
     /[if lt IE 9] 
       script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
   body
@@ -12,5 +12,5 @@ html
     footer.footer
       .container
         p.copyright Taskanatra was created by Tajdid Rahman using Sinatra, and powered using Heroku.
-    script src="/masonry.js"
-    script src="/scripts.js"
+    script src="/js/masonry.js"
+    script src="/js/scripts.js"
