--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -112,6 +112,25 @@ body {
       }
     }
   }
+
+  @media (max-width: 640px) {
+    .header {
+      .logo {
+        font-size: 2.2em;
+      }
+    }
+    .add-form {
+      width: 100%;
+      .task-input {
+        width: 100%;
+        display: block;
+      }
+      .task-add {
+        display: block;
+        width: 100%;
+      }
+    }
+  }
 }
 
 .completed{
@@ -191,6 +210,10 @@ form.delete input{
   &:hover {
     // margin-top: -1px;
     box-shadow: 0px 3px 10px rgba(#d1d1d1, 1);
+  }
+
+  @media (max-width: 640px) {
+    width: 100%;
   }
 }
 
