--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,7 +2,12 @@ doctype html
 html 
   head 
     meta charset="utf-8"
+
     title Taskanatra
+
+    meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    meta name="description" content="Taskanatra is a basic todo app created by Tajdid Rahman"
+    
     link rel="stylesheet" media="screen, projection" href="/css/style.css"
     /[if lt IE 9] 
       script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
@@ -11,6 +16,6 @@ html
 
     footer.footer
       .container
-        p.copyright Taskanatra was created by Tajdid Rahman using Sinatra, and powered using Heroku.
+        p.copyright Taskanatra was created by <a href="http://tajdid.me.uk">Tajdid Rahman</a> using <a href="http://www.sinatrarb.com">Sinatra</a>.
     script src="/js/masonry.js"
     script src="/js/scripts.js"
