--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -218,7 +218,20 @@ form.delete input{
 }
 
 .footer {
+  padding: 20px 0;
   text-align: center;
   font-size: 0.9em;
   color: #999;
+
+  a {
+    color: #666;
+    text-decoration: none;
+    border-bottom: 1px solid rgba(#666, 0);
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      padding-bottom: 0;
+      border-bottom: 1px solid rgba(#666, 1);
+    }
+  }
 }
